--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -7,20 +7,25 @@
   </div>
 <% } else { %>
   <div class="min-h-80">
-    <ul class="flex flex-wrap gap-2 text-center">
+    <ul class="grid grid-cols-1 grid-cols-2 lg:grid-cols-3 gap-6">
       <% categories.forEach(category => { %>
-        <li class="border-2 flex flex-col justify-around w-28">
+        <li class="bg-white shadow-md rounded-lg overflow-hidden">
           <a href="items/category/<%= category._id %>">
-              <img src="<%= category.url || 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' %>" alt="<%= category.name %>">
-              <h5 class="m-3"><%= category.name %></h5>
+            <img class="w-full h-40 object-cover object-center" src="<%= category.url || 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' %>" alt="<%= category.name %>">
           </a>
-          <div class="flex justify-between mx-3">
-              <a href="/categories/<%= category.id %>/edit" class="text-blue-400">Edit</a>
-              <h5 onclick="confirmDelete('/categories/<%= category._id %>')" class="text-right text-red-400" role="button">Delete</h5>
-          </div>
+            <div class="p-4">
+              <div class="flex justify-between items-center">
+                <a href="items/category/<%= category._id %>" class="text-lg font-semibold text-gray-800"><%= category.name %></a>
+                <a href="/categories/<%= category.id %>/edit" class="text-blue-500 hover:text-blue-700">Edit</a>
+              </div>
+              <div class="flex justify-between">
+                <div></div>
+                <h5 class="text-red-500 cursor-pointer" onclick="confirmDelete('/categories/<%= category._id %>')" role="button">Delete</h5>
+              </div>
+            </div>
         </li>
       <% }) %>
-    </ul>
+    </ul>    
   </div>
 <% } %>
 <%- include('footer') %>
