--- a/views/categories.ejs
+++ b/views/categories.ejs
@@ -13,15 +13,16 @@
           <a href="items/category/<%= category._id %>">
             <img class="w-full h-40 object-cover object-center" src="<%= category.url || 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' %>" alt="<%= category.name %>">
           </a>
-            <div class="p-4">
-              <div class="flex justify-between items-center">
+            <div class="p-4 flex justify-between items-center">
                 <a href="items/category/<%= category._id %>" class="text-lg font-semibold text-gray-800"><%= category.name %></a>
-                <a href="/categories/<%= category.id %>/edit" class="text-blue-500 hover:text-blue-700">Edit</a>
-              </div>
-              <div class="flex justify-between">
-                <div></div>
-                <h5 class="text-red-500 cursor-pointer" onclick="confirmDelete('/categories/<%= category._id %>')" role="button">Delete</h5>
-              </div>
+                <div class="flex justify-between gap-4">
+                  <a href="/categories/<%= category.id %>/edit" class="text-blue-500 hover:text-blue-700">
+                    <i class="bi bi-pencil-fill"></i>
+                  </a>
+                  <h5 class="text-red-500 cursor-pointer" onclick="confirmDelete('/categories/<%= category._id %>')" role="button">
+                    <i class="bi bi-trash3-fill"></i>
+                  </h5>
+                </div>
             </div>
         </li>
       <% }) %>
