--- a/views/item.ejs
+++ b/views/item.ejs
@@ -5,14 +5,20 @@
         <div class="max-w-md mx-auto bg-white rounded-lg overflow-hidden shadow-lg">
             <img class="w-full h-auto" src="<%= item.url || 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' %>" alt="Product Image">
             <div class="p-4">
-                <h2 class="text-xl font-semibold text-gray-800"><%= item.name %></h2>
+                <div class="flex justify-between">
+                    <h2 class="text-xl font-semibold text-gray-800"><%= item.name %></h2>
+                    <div class="flex">
+                        <a href="/items/<%= item.id %>/edit" class="text-blue-500 hover:text-blue-600 font-semibold py-2 px-4 rounded">
+                            <i class="bi bi-pencil-fill"></i>
+                        </a>
+                        <h5 onclick="confirmDelete('/items/<%= item._id %>')" class="text-red-500 hover:text-red-600 font-semibold py-2 px-4 rounded" role="button">
+                            <i class="bi bi-trash3-fill"></i>
+                        </h5>
+                    </div>
+                </div>
                 <p class="text-gray-600 mb-2"><%= item.description %></p>
                 <p class="text-gray-700 font-bold">$<%= item.price %></p>
                 <p class="text-gray-600 mb-4">Available: <%= item.numberInStock %> in stock</p>
-                <div class="flex justify-between">
-                    <a href="/items/<%= item.id %>/edit" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded">Edit</a>
-                    <h5 onclick="confirmDelete('/items/<%= item._id %>')" class="bg-red-500 hover:bg-red-600 text-white font-semibold py-2 px-4 rounded" role="button">Delete</h5>
-                </div>
             </div>
         </div>
     </div>
