--- a/views/items.ejs
+++ b/views/items.ejs
@@ -9,15 +9,21 @@
                 <li class="border rounded-lg p-4 flex flex-col justify-between">
                     <a href="/items/<%= item._id %>" class="flex flex-col items-center">
                         <img src="<%= item.url || 'https://www.svgrepo.com/show/508699/landscape-placeholder.svg' %>" alt="<%= item.name %>" class="w-32 h-32 object-cover mb-4">
-                        <h5 class="text-lg font-bold text-center"><%= item.name %></h5>
+                        <div class="flex justify-between">
+                            <h5 class="text-lg font-bold"><%= item.name %></h5>
+                            <div class="flex justify-end gap-4 items-center">
+                                <a href="/items/<%= item._id %>/edit" class="text-blue-500 hover:text-blue-700">
+                                    <i class="bi bi-pencil-fill"></i>
+                                </a>
+                                <h5 onclick="confirmDelete('/items/<%= item._id %>')" class="text-red-500 cursor-pointer hover:text-red-700">
+                                    <i class="bi bi-trash3-fill"></i>
+                                </h5>
+                            </div>
+                        </div>
                         <h5 class="text-center text-gray-700"><%= item.price %></h5>
                         <h5 class="text-center text-gray-700 truncate ... w-full"><%= item.description %></h5>
                         <h5 class="text-center text-gray-700">Stock: <%= item.numberInStock %></h5>
                     </a>
-                    <div class="flex justify-between items-center mt-4">
-                        <a href="/items/<%= item._id %>/edit" class="text-blue-500 hover:text-blue-700">Edit</a>
-                        <h5 onclick="confirmDelete('/items/<%= item._id %>')" class="text-red-500 cursor-pointer hover:text-red-700">Delete</h5>
-                    </div>
                 </li>
             <% }) %>
         </ul>
